--- a/server/static/basic.html
+++ b/server/static/basic.html
@@ -114,7 +114,7 @@
       <a-light type="directional" intensity="0.9" position="-1 -2  2"></a-light>
       <a-light type="directional" intensity="1.0" position=" 2  1 -1"></a-light>
       <a-assets>
-        <a-asset-item id="penguin" src="/3DModels/NiceBed.glb"></a-asset-item>
+        <a-asset-item id="penguin" src="/3DModels/NiceBed/NiceBed.glb"></a-asset-item>
       </a-assets>
       <a-entity gltf-model="#penguin"></a-entity>
 
