--- a/server/static/basic.html
+++ b/server/static/basic.html
@@ -114,7 +114,7 @@
               ></a-entity>
             </a-entity>
         </a-entity>
-        <a-entity ui-modal visible="false">
+        <!-- <a-entity ui-modal visible="false">
           <a-plane width="3" height="0.5" color="black" position="0 -3.2 0" opacity="0.5">
                   <a-text id="text1" value="Insert Bed"></a-text>
           </a-plane>
@@ -126,7 +126,7 @@
           opacity="0.5">
                   <a-text id="text3" value="Insert pet"></a-text>
           </a-plane>
-        </a-entity> 
+        </a-entity>  -->
 
       <a-entity cubemap="folder: /InternalTextures/cubemaps/Boston/; edgeLength: 100"></a-entity>
 
