Adding the JSON pipeline

--- a/server/static/basic.html
+++ b/server/static/basic.html
@@ -142,7 +142,7 @@
 
       
 
-      <a-entity id="bedModel" class="interactive" geometry="primitive: box; width: 3; depth: 2; height: 1.5" material="wireframe: true; transparency: true; opacity: 1.0" position="2.7 1 -0.5" cursor-listener>
+      <a-entity id="bed1" class="interactive" geometry="primitive: box; width: 3; depth: 2; height: 1.5" material="wireframe: true; transparency: true; opacity: 1.0" position="2.7 1 -0.5" cursor-listener>
           
           <a-entity  gltf-model="#bed" position="-1 -1 -1" 
                     scale="0.5 0.5 0.5" rotation="0 0 0"
