--- a/server/static/syria.html
+++ b/server/static/syria.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/aframe-randomizer-components@^3.0.1/dist/aframe-randomizer-components.min.js"></script>
     <script src="https://unpkg.com/aframe-room-component/dist/aframe-room-component.min.js"></script> 
     <script src="https://unpkg.com/aframe-cubemap-component@0.1.2/dist/aframe-cubemap-component.min.js"></script>
-    <script src="https://rawgit.com/bryik/aframe-bmfont-text-component/master/dist/aframe-bmfont-text-component.min.js"></script>
+<!--     <script src="https://rawgit.com/bryik/aframe-bmfont-text-component/master/dist/aframe-bmfont-text-component.min.js"></script> -->
     <script src="js/util.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
     <script src="js/cursor-listener.js"></script>
@@ -113,7 +113,7 @@
               </a-entity>
             </a-entity>
         </a-entity>
-        <a-entity ui-modal visible="false">
+    <!--     <a-entity ui-modal visible="false">
           <a-plane width="3" height="0.5" color="black" position="0 -3.2 0" opacity="0.5">
                   <a-text id="text1" value="Insert Bed"></a-text>
           </a-plane>
@@ -125,7 +125,7 @@
           opacity="0.5">
                   <a-text id="text3" value="Insert pet"></a-text>
           </a-plane>
-        </a-entity>
+        </a-entity> -->
         <a-entity cubemap="folder: /InternalTextures/cubemaps/Syria/; edgeLength: 100"></a-entity>
       <a-plane src="#groundTexture" rotation="-90 0 0" position="0 -0.01 0" height="100" width="100"></a-plane>
       <a-assets> 
@@ -139,32 +139,28 @@
       </a-assets>
 
       <!-- Nightstand bounding box and model --> 
-      <a-entity id="nightStandModel" class="interactive" geometry="primitive: box; width: 0.8; depth: 0.8; height: 2.3" material="wireframe: true; transparency: true; opacity: 1.0" position="4.5 0 0" cursor-listener>
+      <a-entity id="nightstand1" class="interactive" geometry="primitive: box; width: 0.8; depth: 0.8; height: 2.3" material="wireframe: true; transparency: true; opacity: 1.0" position="4.5 0 0" cursor-listener>
         <a-entity class="interactive" gltf-model="#nightstand2" position = "0 0 0" scale="0.002 0.002 0.002" rotation="0 -90 0" handle-events></a-entity>
       </a-entity>
       <!-- end --> 
-
       <!-- Artist easel bounding box and model --> 
       <a-entity id="artistEaselModel" class="interactive" geometry="primitive: box; width: 0.8; depth: 0.8; height: 2.3" material="wireframe: true; transparency: true; opacity: 1.0" position="0 0.005 2.5" cursor-listener>
         <a-entity class="artist" gltf-model="#artist" position="0 0 0" scale="0.005 0.005 0.005" rotation = "0 175 0" handle-events></a-entity>
       </a-entity>
       <!--end-->
-
       <a-entity class="interactive" gltf-model="#cat3" position="0 0 -0.5" 
                 scale="0.01 0.01 0.01" rotation="0 0 0"
                 cursor-listener>
       </a-entity>
-
       <!-- Bed bounding box and model --> 
-      <a-entity id="bedModel" class="interactive" geometry="primitive: box; width: 2; depth: 0.8; height: 2.8" material="wireframe: true; transparency: true; opacity: 1.0" position="0 0 -1" cursor-listener>
+      <a-entity id="bed1" class="interactive" geometry="primitive: box; width: 2; depth: 0.8; height: 2.8" material="wireframe: true; transparency: true; opacity: 1.0" position="2 0 -1" cursor-listener>
         <a-entity class="interactive" gltf-model="#bed" position="2.8 0 2" 
                 scale="0.1 0.1 0.1" rotation="0 0 0"
                 cursor-listener></a-entity>
       </a-entity>
       <!-- end --> 
-
       <!-- Table bounding box and model --> 
-      <a-entity id="bedModel" class="interactive" geometry="primitive: box; width: 1; depth: 1; height: 1" material="wireframe: true; transparency: true; opacity: 1.0" position="4.5 0.0 2.1" cursor-listener>
+      <a-entity id="table" class="interactive" geometry="primitive: box; width: 1; depth: 1; height: 1" material="wireframe: true; transparency: true; opacity: 1.0" position="4.5 0.0 2.1" cursor-listener>
         <a-entity class="interactive" gltf-model="#table" position="0 0 0 " scale="1.4 1 1.4"></a-entity>
       </a-entity>
       <!-- <a-entity class="interactive"  gltf-model="#drawer" position="-0.5 0.0 -1.95" 
@@ -177,13 +173,23 @@
                 ></a-entity> -->
        <!-- ROOM SETUP -->
        <rw-room position="-2 0 -2" mixin="wallMat">
-            <rw-wall position="7 0 0"></rw-wall>
-            <rw-wall position="7 0 5"></rw-wall>
-            <rw-wall position="0 0 5"></rw-wall>
-            <rw-wall position="0 0 0">
-              <rw-doorhole id="holeA"></rw-doorhole>
+            <rw-wall position="7 0 0" height="4"></rw-wall>
+            <rw-wall position="7 0 5" height="4"></rw-wall>
+            <rw-wall position="0 0 5" height="4"></rw-wall>
+            <rw-wall position="0 0 0" height="4">
+              <rw-doorhole id="holeA" height="4"></rw-doorhole>
             </rw-wall>
+            <rw-ceiling></rw-ceiling>
             <rw-floor mixin="floorMat"></rw-floor>
+        </rw-room>
+        <rw-doorlink from="#holeA" to="#holeB" width="1" position="0 -1 0">
+        <rw-room position="0 0 -3" material="src:#wallTexture; repeat:2.0 2.0;">
+            <rw-wall position="-1 0 -1"></rw-wall>
+            <rw-wall position=" -1 0  1">
+                <rw-doorhole id="holeB"></rw-doorhole>
+            </rw-wall>
+            <rw-wall position="-1 0  1" ></rw-wall>
+            <rw-wall position="-1 0 -1" ></rw-wall>
         </rw-room>
         
 <!--
