--- a/server/static/basic.html
+++ b/server/static/basic.html
@@ -17,6 +17,8 @@
     <script src="https://unpkg.com/aframe-cubemap-component@0.1.2/dist/aframe-cubemap-component.min.js"></script>
     <script src="js/util.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://github.com/nylki/aframe-fit-texture-component/raw/master/dist/aframe-fit-texture-component.min.js"></script> 
+    <script src="https://unpkg.com/aframe-look-at-component@0.5.1/dist/aframe-look-at-component.min.js"></script>
     <script src="js/cursor-listener.js"></script>
  
     <script>
@@ -205,7 +207,7 @@
         </rw-room>
     </a-scene>
 
-    
+
     <div class="a-enter-vr" aframe-injected>
       <button class="menu-button" title="click for options" aframe-injected>
       </button> 
