--- a/server/static/syria.html
+++ b/server/static/syria.html
@@ -265,6 +265,11 @@
     <div class="a-enter-vr" aframe-injected>
       <button class="menu-button" title="click for options" aframe-injected>
       </button> 
+
+      <a href="http://google.com" title="click for options" aframe-injected>
+      Click here!
+      </a> 
+
     </div>
     <script>
       // On mobile remove elements that are resource heavy
