adding changes to USroom and SyriaRoom, as well as asset list

--- a/server/static/basic.html
+++ b/server/static/basic.html
@@ -204,7 +204,6 @@
             <rw-wall position="0 0 0" height="4">
               <rw-doorhole id="holeA" height="4"></rw-doorhole>
             </rw-wall>
-            <rw-ceiling></rw-ceiling>
             <rw-floor mixin="floorMat"></rw-floor>
         </rw-room>
         <rw-doorlink from="#holeA" to="#holeB" width="1" position="0 -1 0">
@@ -222,6 +221,9 @@
     <div class="a-enter-vr" aframe-injected>
       <button class="menu-button" title="click for options" aframe-injected>
       </button> 
+      <a href="https://syriaroom.herokuapp.com/syria.html" title="click for options" aframe-injected>
+      Click here!
+      </a>
     </div>
     <script>
       // On mobile remove elements that are resource heavy
