--- a/server/static/syria.html
+++ b/server/static/syria.html
@@ -190,7 +190,6 @@
             <rw-wall position="0 0 0" height="4">
               <rw-doorhole id="holeA" height="4"></rw-doorhole>
             </rw-wall>
-            <rw-ceiling></rw-ceiling>
             <rw-floor mixin="floorMat"></rw-floor>
         </rw-room>
         <rw-doorlink from="#holeA" to="#holeB" width="1" position="0 -1 0">
@@ -208,7 +207,7 @@
       <button class="menu-button" title="click for options" aframe-injected>
       </button> 
 
-      <a href="http://google.com" title="click for options" aframe-injected>
+      <a href="https://usroom.herokuapp.com/basic.html" title="click for options" aframe-injected>
       Click here!
       </a> 
 
